--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Roboto', sans-serif;
-    color: #2E2F42;
+    color: #434455;
     background-color: #ffffff;  
 }
 
@@ -23,7 +23,7 @@ body {
         font-size: 18px;
         font-style: normal;
         font-weight: 700;
-        line-height: 1.16;
+        line-height: 1.17;
         letter-spacing: 0.03em;
         text-transform: uppercase;
 }
@@ -48,6 +48,10 @@ body {
 
 .header-menu-link:hover, .header-menu-link:focus {
     color: #404BBF;
+}
+
+.contacts {
+    font-style: normal;
 }
 
 .contacts-menu-link {
@@ -99,12 +103,11 @@ body {
         font-weight: 500;
         line-height: 1.5;
         letter-spacing: 0.04em;
-        border-radius: 4px;
          background: #4D5AE5;
-         box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+         cursor: pointer;
 }
 
-.hero-buy-btn:hover {
+.hero-buy-btn:hover, .hero-buy-btn:focus {
     background: #404BBF;
 }
 
@@ -216,5 +219,5 @@ color:  #434455;
     color: #F4F4FD;
         font-size: 16px;
         line-height: 1.5;
-        letter-spacing: 0.02;
+        letter-spacing: 0.02em;
 }
