--- a/css/styles.css
+++ b/css/styles.css
@@ -84,13 +84,13 @@ body {
 }
 
 .hero-buy-btn {
-    background-color: #4D5AE5;
     color: #ffffff;
         font-family: Roboto, sans-serif;
         font-size: 16px;
         font-weight: 500;
         line-height: 1.5;
         letter-spacing: 0.04em;
+        background: #4D5AE5;
          cursor: pointer;    
 }
 
