--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,12 @@ body {
     background: #404BBF;
 }
 
+.visually-hidden {
+    color: #2E2F42;
+}
+
 .features-subtitle {
+    color: #2E2F42;
         font-size: 20px;
         font-weight: 500;
         line-height: 1.2;
